Updated to sbt 0.12.0 and newest xsbt-web-plugin. removed eclipse plugin as it does not resolve anymore